Testing: Client Repository Test | Test 1: Updated Client is found test, testing different testscases and removed JPQL from findByLastName method in repo (#5)